--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,14 @@
 version: "3.9"
 services:
-  web:
-    build: .
+  dbserver:
+    image: container-registry.oracle.com/database/enterprise:latest
+    volumes:
+      - /home/oracle/oradata:/opt/oracle/oradata # persistent oracle database data.
     ports:
-      - "5000:5000"
-  oracledb:
-    image: "redis:alpine"
-  grafana:
+      - 1521:1521
+      - 8080:8080
+      - 5500:5500
+  dbclient:
+    image: ghcr.io/oracle/oraclelinux8-instantclient:19
+  dbords:
+     image: container-registry.oracle.com/database/ords:latest
